# grokrxiv

./: .dockerignore  .env.example  .env_billing.example  .env_dev.example  .env_extract.example  .env_ingest.example  .env_review.example  .env_web.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Justfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SKILLS.md  bibliography_audit.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
agenthero/apps/c2rust/: Cargo.toml  app.yaml  tools.yaml
agenthero/apps/c2rust/dags/: c2rust.yaml
agenthero/apps/c2rust/evals/: smoke.yaml
agenthero/apps/c2rust/rust/: Cargo.toml
agenthero/apps/c2rust/state/: run_state.schema.json
agenthero/apps/grokrxiv/: Cargo.toml  README.md  app.yaml  tools.yaml
agenthero/apps/grokrxiv/dags/: citation-validation.yaml  paper-ingest.yaml  review-loop.yaml
agenthero/apps/grokrxiv/docs/: DEPLOYMENT.md  dag-abstraction-gap-analysis.md  deployment-topology-applied.md  grokrxiv-cli-cheatsheet.md  grokrxiv-cli-reference-applied.md  grokrxiv-env-reference-applied.md  ingest-extraction-gap-analysis.md  ingest-parallel-via-futuresunordered-applied.md  ingest-tex-with-pdf-fallback-applied.md  manual-publish-status-for-real-paper-test-applied.md  web-env-local-placeholder-fix-applied.md  web-stale-next-cache-fix-applied.md
agenthero/apps/grokrxiv/env/: .env_core.example  .env_dev.example  .env_extract.example  .env_publish.example  .env_review.example  .env_web.example
agenthero/apps/grokrxiv/evals/: LOOP.md  PHASES.md  corpus.yaml  review-loop-smoke.yaml  toolchain.lock.yaml
agenthero/apps/grokrxiv/infra/: compose.cloud.yml  docker-compose.yml  railway.json
agenthero/apps/grokrxiv/migrations/: 20250513000002_rls.sql  20250513000003_seed.sql  20250513000005_papers_submitted_date.sql  20260515000001_review_inputs.sql  20260515221300_reviews_mode.sql  20260515221301_revision_patches.sql  20260517000001_reviews_show_pr_open.sql  20260518000001_review_rejections.sql  20260519000001_source_review_abstraction.sql  20260520000001_agent_runner_persistence.sql  20260522000003_agenthero_grokrxiv_projection_rename.sql
agenthero/apps/grokrxiv/policies/: release_tiers.yaml  repair_policy.yaml
agenthero/apps/grokrxiv/prompts/: citation.md  html_quality.md  meta_reviewer.md
agenthero/apps/grokrxiv/rust/: Cargo.toml
agenthero/apps/grokrxiv/schemas/: agent_record.schema.json  author.schema.json  citation.schema.json  citation_validation_report.schema.json  claim_graph.schema.json  html_quality_review.schema.json  lean_faithfulness_verdict.schema.json  lean_library_artifact.schema.json  lean_library_file_edit_artifact.schema.json  lean_statement_author.schema.json  lean_verification.schema.json  render_artifact.schema.json  research_bundle.schema.json  review.schema.json  review_loop_code_artifact.schema.json  review_loop_code_review.schema.json  review_loop_code_task.schema.json  review_loop_file_edit_artifact.schema.json  review_score.schema.json  revision_artifact.schema.json  semantic_ir.schema.json  technical_review.schema.json  verdict.schema.json
agenthero/apps/grokrxiv/scripts/: dev-webhook.sh  pipeline-e2e.sh  preflight.sh  publish-e2e.sh
agenthero/apps/grokrxiv/skills/: README.md  package.json
agenthero/apps/grokrxiv/state/: run_state.schema.json
agenthero/apps/grokrxiv/tests/: m1-pipeline.sh
agenthero/apps/grokrxiv/web/: package.json
agenthero/apps/platform-smoke/: Cargo.toml  app.yaml
agenthero/apps/platform-smoke/dags/: approval-pause-smoke.yaml  budget-consumption-smoke.yaml  cancellation-smoke.yaml  isolation-boundary-smoke.yaml  policy-denial-smoke.yaml  tool-policy-smoke.yaml  verification-routing-smoke.yaml
agenthero/apps/platform-smoke/rust/: Cargo.toml
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: app_protocol.rs  lib.rs  runner.rs  tool_context.rs  types.rs
crates/app-sdk/: Cargo.toml
crates/app-sdk/src/: lib.rs
crates/app-sdk/tests/: adapter_sdk.rs
crates/dag-app-c2rust/: Cargo.toml
crates/dag-app-c2rust/src/: main.rs
crates/dag-app-citation-validation/: Cargo.toml
crates/dag-app-citation-validation/src/: lib.rs
crates/dag-app-paper-ingest/: Cargo.toml
crates/dag-app-paper-ingest/src/: lib.rs
crates/dag-app-paper-publish/: Cargo.toml
crates/dag-app-paper-publish/src/: lib.rs
crates/dag-app-paper-revise/: Cargo.toml
crates/dag-app-paper-revise/src/: lib.rs
crates/dag-executor/: Cargo.toml
crates/dag-executor/src/: lib.rs
crates/dag-executor/tests/: executor.rs
crates/dag-runtime/: Cargo.toml
crates/dag-runtime/src/: lib.rs
crates/dag-runtime/tests/: manifest.rs
crates/llm-adapter/: Cargo.toml
crates/llm-adapter/src/: lib.rs  retry.rs
crates/llm-adapter/src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs  vllm.rs
crates/llm-adapter/tests/: recorded.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: app_runs.rs  batch.rs  cli.rs  cli_status.rs  config.rs  dag_apps.rs  dag_tools.rs  db.rs  doctor.rs  entrypoint.rs  github_feedback.rs  html_review.rs  ingest_pipeline.rs  lib.rs  main.rs  review_dag.rs  review_gate.rs  revision_targets.rs  runtime_config.rs  scheduler.rs  serve.rs  source_display.rs  state.rs  supervisor.rs  telemetry.rs
crates/orchestrator/src/agents/: config.rs  mod.rs  review_agents.rs  sandbox.rs  specialist_facts.rs  traits.rs  types.rs
crates/orchestrator/src/routes/: internal.rs  mod.rs  preview.rs  webhook.rs
crates/orchestrator/src/supervisor/: jobs.rs  merge_facts.rs  prompts.rs  publish.rs  rendering.rs  review_flow.rs  verification.rs
crates/orchestrator/src/supervisor_runner/: claude.rs  codex.rs  gemini.rs  local.rs  mod.rs  (+2 more)
crates/orchestrator/tests/: agenthero_cli_contract.rs  app_runtime_schema.rs  dag.rs  dag_app_registry.rs  pipeline_integration.rs  supervisor_runner_mvp.rs
crates/render/: Cargo.toml
crates/render/src/: bundle.rs  html.rs  latex.rs  lib.rs  md.rs
crates/render/templates/: review.html.jinja
crates/render/tests/: render.rs
crates/schemas/: Cargo.toml
crates/schemas/src/: lib.rs
(+670 files in other folders)
