[workspace]
resolver = "2"
members = [
    "crates/orchestrator",
    "crates/llm-adapter",
    "crates/ingest",
    "crates/render",
    "crates/verifier",
    "crates/publisher",
    "crates/schemas",
    "crates/storage",
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrokRxiv/grokrxiv"

[workspace.dependencies]
# async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# http
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
hyper = "1.5"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }

# serde + schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.26"

# db
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# misc
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
dotenvy = "0.15"

# integrations
octocrab = "0.42"
zip = "2.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
