[package]
name = "agenthero-app-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable process-adapter helpers for AgentHero DAGOps apps."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
agenthero-agent-runtime = { path = "../agent-runtime" }
agenthero-dag-executor = { path = "../dag-executor" }
agenthero-dag-runtime = { path = "../dag-runtime" }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
