[package]
name = "agenthero-dag-app-c2rust"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C2Rust DAG app proving the generic executor is not paper-review shaped."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
agenthero-agent-runtime = { path = "../agent-runtime" }
agenthero-dag-executor = { path = "../dag-executor" }
agenthero-dag-runtime = { path = "../dag-runtime" }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
