[package]
name = "grokrxiv-dag-app-citation-validation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Citation validation DAG app adapter for the generic GrokRxiv executor."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
grokrxiv-dag-executor = { path = "../dag-executor" }
grokrxiv-schemas = { path = "../schemas" }
grokrxiv-verifier = { path = "../verifier" }
serde_json = { workspace = true }
