[package]
name = "grokrxiv-dag-app-paper-ingest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Paper ingest DAG app adapter for the generic GrokRxiv executor."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
grokrxiv-dag-executor = { path = "../dag-executor" }
serde_json = { workspace = true }
grokrxiv-ingest = { path = "../ingest" }
