[package]
name = "grokrxiv-dag-app-paper-publish"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Paper publish DAG app adapter for the generic GrokRxiv executor."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
agenthero-dag-executor = { path = "../dag-executor" }
serde_json = { workspace = true }
grokrxiv-publisher = { path = "../publisher" }
grokrxiv-schemas = { path = "../schemas" }
