[package]
name = "grokrxiv-llm-adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLMProvider trait + Claude/Gemini/OpenAI/vLLM adapters for GrokRxiv."

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
grokrxiv-schemas = { path = "../schemas" }

[features]
default = ["claude", "gemini", "openai", "vllm"]
claude = []
gemini = []
openai = []
vllm = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "=0.6.2"
