[package]
name = "agenthero-llm-adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentHero LLM provider traits and Claude/Gemini/OpenAI/vLLM adapters."

[lib]
name = "agenthero_llm_adapter"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["claude", "gemini", "openai", "vllm"]
claude = []
gemini = []
openai = []
vllm = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "=0.6.2"
