[package]
name = "agenthero-orchestrator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentHero DAGOps runtime CLI, app discovery, and generic scheduler surface."
default-run = "agh"

[[bin]]
name = "agh"
path = "src/main.rs"

[[bin]]
name = "agenthero"
path = "src/bin/agenthero.rs"

[lib]
path = "src/lib.rs"

[dependencies]
agenthero-agent-runtime = { path = "../agent-runtime" }
agenthero-dag-executor = { path = "../dag-executor" }
agenthero-dag-runtime = { path = "../dag-runtime" }
anstream = "0.6"
anstyle = "1"
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { version = "=4.5.20", features = ["derive", "string"] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = "0.8"
