[package]
name = "grokrxiv-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML / Markdown / LaTeX / PDF / zip-bundle builders for GrokRxiv reviews."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false }
minijinja = { version = "2", default-features = false, features = ["builtins", "macros", "loader", "serde"] }
once_cell = "1"
grokrxiv-schemas = { path = "../schemas" }
tectonic = { version = "0.15", optional = true }

[features]
default = []
# When enabled, exposes `pdf::latex_to_pdf` which compiles LaTeX with tectonic.
# Off by default because tectonic pulls in heavy native deps.
pdf = ["tectonic"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
