[workspace]
resolver = "2"
members = ["rust"]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrokRxiv/grokrxiv"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41", features = ["full"] }

agenthero-agent-runtime = { path = "../../../crates/agent-runtime" }
agenthero-app-sdk = { path = "../../../crates/app-sdk" }
agenthero-dag-executor = { path = "../../../crates/dag-executor" }
agenthero-dag-runtime = { path = "../../../crates/dag-runtime" }
