[workspace]
resolver = "2"
members = [
    "rust",
    "crates/orchestrator",
    "crates/review-loop",
    "crates/ingest",
    "crates/render",
    "crates/publisher",
    "crates/storage",
    "crates/verifier",
    "crates/schemas",
    "crates/extraction",
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrokRxiv/grokrxiv"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
hyper = "1.5"
reqwest = { version = "=0.12.28", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.26"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "=2.5.2"
base64ct = "=1.6.0"
idna_adapter = "=1.0.0"
dotenvy = "0.15"

octocrab = "0.42"
zip = "2.2"

agenthero-agent-runtime = { path = "../../../crates/agent-runtime" }
agenthero-app-sdk = { path = "../../../crates/app-sdk" }
agenthero-dag-executor = { path = "../../../crates/dag-executor" }
agenthero-dag-runtime = { path = "../../../crates/dag-runtime" }
grokrxiv-llm-adapter = { package = "agenthero-llm-adapter", path = "../../../crates/llm-adapter" }

grokrxiv-app-runtime = { path = "crates/orchestrator" }
grokrxiv-extraction = { path = "crates/extraction" }
grokrxiv-ingest = { path = "crates/ingest" }
grokrxiv-publisher = { path = "crates/publisher" }
grokrxiv-render = { path = "crates/render" }
grokrxiv-review-loop = { path = "crates/review-loop" }
grokrxiv-schemas = { path = "crates/schemas" }
grokrxiv-storage = { path = "crates/storage" }
grokrxiv-verifier = { path = "crates/verifier" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
