[package]
name = "agenthero-dag-app-grokrxiv"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GrokRxiv DAGOps app implementation."

[lib]
path = "src/lib.rs"

[[bin]]
name = "agenthero-dag-app-grokrxiv"
path = "src/main.rs"

[dependencies]
agenthero-agent-runtime = { workspace = true }
agenthero-app-sdk = { workspace = true }
agenthero-dag-executor = { workspace = true }
agenthero-dag-runtime = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
base64ct = { workspace = true }
hex = "0.4"
idna_adapter = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png"] }
jsonschema = { workspace = true }
lopdf = "0.36"
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_latest", "thread_safe", "image_024"] }
regex = "1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

grokrxiv-app-runtime = { workspace = true }
grokrxiv-extraction = { workspace = true }
grokrxiv-ingest = { workspace = true }
grokrxiv-llm-adapter = { workspace = true }

[dev-dependencies]
wiremock = "=0.6.2"
