[package]
name = "agenthero-dag-app-platform-smoke"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentHero platform smoke DAG app."

[[bin]]
name = "agenthero-dag-app-platform-smoke"
path = "src/main.rs"

[dependencies]
agenthero-agent-runtime = { workspace = true }
agenthero-app-sdk = { workspace = true }
agenthero-dag-executor = { workspace = true }
agenthero-dag-runtime = { workspace = true }
anyhow = { workspace = true }
idna_adapter = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
