[package]
name = "grokrxiv-extraction"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GrokRxiv extraction agents, tools, and deterministic scanners."

[lib]
path = "src/lib.rs"

[dependencies]
agenthero-agent-runtime = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
hex = "0.4"
image = { version = "0.24", default-features = false, features = ["png"] }
jsonschema = { workspace = true }
lopdf = "0.36"
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_latest", "thread_safe", "image_024"] }
regex = "1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

grokrxiv-ingest = { path = "../ingest" }
grokrxiv-llm-adapter = { workspace = true }
grokrxiv-schemas = { path = "../schemas" }
