[package]
name = "grokrxiv-ingest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "arXiv puller and PDF/LaTeX text extraction for GrokRxiv."

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
pdf-extract = "0.7"
tar = "0.4"
flate2 = "1.0"
regex = "1"
bytes = "1"
once_cell = "1"
chrono = { workspace = true }
tempfile = "3"
sha2 = "0.10"
grokrxiv-schemas = { path = "../schemas" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
