[package]
name = "grokrxiv-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "3-tier persistence SDK (Git data repo + Supabase Object Storage) and PaperArtifacts router for GrokRxiv."

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
