[package]
name = "grokrxiv-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Verifier ladder (JSON-schema, citation, tone, render) for GrokRxiv artifacts."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
jsonschema = { workspace = true }
regex = "1"
lol_html = "1"
tokio = { workspace = true }
futures = { workspace = true }
once_cell = "1"
parking_lot = "0.12"
grokrxiv-schemas = { path = "../schemas" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
